--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15479,6 +15479,7 @@ nav .nav {
   position: fixed;
   z-index: 1;
   width: 100%;
+  padding: 0 !important;
   height: 96px;
   background-color: #0F0D1E; }
   nav .nav .sd {
@@ -15489,131 +15490,133 @@ nav .nav {
       padding-top: 20px; }
       nav .nav .sd .left_side .img_logo img {
         width: 100%; }
-    nav .nav .sd .right_side .links .links_ul {
-      display: flex; }
-      nav .nav .sd .right_side .links .links_ul .sub_menu.links_ul_li.resc .dropdwn12.resource {
-        position: relative;
-        margin: 0 auto;
-        visibility: hidden;
-        transform: translateY(-200px);
-        transition: transform .5s ease-in-out; }
-        nav .nav .sd .right_side .links .links_ul .sub_menu.links_ul_li.resc .dropdwn12.resource.active7 {
-          visibility: visible !important;
-          transform: translateY(2px);
-          transition: transform 0.3s ease-in-out; }
-        nav .nav .sd .right_side .links .links_ul .sub_menu.links_ul_li.resc .dropdwn12.resource .res_ul {
-          background-color: #d1dfc3;
-          border-radius: 8px;
-          position: absolute;
-          display: flex;
-          flex-direction: column;
-          overflow-y: scroll;
-          max-height: 400px;
-          padding-left: 10px;
-          padding-top: 20px;
-          margin-top: 25px;
-          margin-left: -20px; }
-          nav .nav .sd .right_side .links .links_ul .sub_menu.links_ul_li.resc .dropdwn12.resource .res_ul .p_resc {
-            margin-top: 5px;
-            margin-bottom: 10px;
-            color: #0f0d1e;
-            font-size: 18px;
-            line-height: 26px;
-            font-weight: 600; }
-          nav .nav .sd .right_side .links .links_ul .sub_menu.links_ul_li.resc .dropdwn12.resource .res_ul .a-hover {
-            margin-bottom: -14px;
-            color: #0f0d1e;
-            font-size: 18px;
-            line-height: 26px;
-            font-weight: 600; }
-          nav .nav .sd .right_side .links .links_ul .sub_menu.links_ul_li.resc .dropdwn12.resource .res_ul .res_ul_li {
-            padding-right: 40px;
-            margin-bottom: 10px;
-            margin-left: 15px; }
-            nav .nav .sd .right_side .links .links_ul .sub_menu.links_ul_li.resc .dropdwn12.resource .res_ul .res_ul_li .a-hover {
-              color: #222;
-              font-weight: normal; }
-      nav .nav .sd .right_side .links .links_ul .h_w1 {
-        margin-left: 44px; }
-      nav .nav .sd .right_side .links .links_ul .sub_menu .ox {
-        color: white;
-        font-size: 40px;
-        margin-left: 5px; }
-        nav .nav .sd .right_side .links .links_ul .sub_menu .ox.active12 {
-          transform: rotate(180deg);
-          transition: transform 0.8s  ease-in-out; }
-      nav .nav .sd .right_side .links .links_ul .sub_menu .dropdwn12.h_w123 {
-        position: relative;
-        margin: 0 auto;
-        visibility: hidden;
-        transform: translateY(-200px);
-        transition: transform 0.2s ease-in-out; }
-        nav .nav .sd .right_side .links .links_ul .sub_menu .dropdwn12.h_w123.active7 {
-          visibility: visible !important;
-          transform: translateY(2px);
-          transition: transform 0.3s ease-in-out; }
-        nav .nav .sd .right_side .links .links_ul .sub_menu .dropdwn12.h_w123 .hw_ul {
-          background-color: #d1dfc3;
-          border-radius: 8px;
-          position: absolute;
-          display: flex;
-          flex-direction: column;
-          padding: 40px;
-          margin-top: 25px;
-          margin-left: -20px; }
-          nav .nav .sd .right_side .links .links_ul .sub_menu .dropdwn12.h_w123 .hw_ul .hw_ul_li {
-            white-space: nowrap;
-            margin-bottom: 12px;
-            font-size: 16px; }
-            nav .nav .sd .right_side .links .links_ul .sub_menu .dropdwn12.h_w123 .hw_ul .hw_ul_li a {
-              color: black; }
-              nav .nav .sd .right_side .links .links_ul .sub_menu .dropdwn12.h_w123 .hw_ul .hw_ul_li a:hover {
-                color: #867df3; }
-      nav .nav .sd .right_side .links .links_ul .sub_men3 {
-        margin-top: 10px;
-        margin-right: 10px; }
-      nav .nav .sd .right_side .links .links_ul .links_ul_li {
-        margin-top: 20px;
-        font-size: 16px;
-        display: inline-block;
-        margin-right: 22px;
-        white-space: nowrap;
-        padding: 15px;
-        cursor: pointer; }
-        nav .nav .sd .right_side .links .links_ul .links_ul_li:hover {
-          background-color: #1B1734;
-          border-radius: 4px;
-          cursor: pointer; }
-        nav .nav .sd .right_side .links .links_ul .links_ul_li a:hover {
-          color: white; }
-      nav .nav .sd .right_side .links .links_ul .buttons_nav {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-wrap: nowrap; }
-        nav .nav .sd .right_side .links .links_ul .buttons_nav .log_in_nav {
-          cursor: pointer;
-          margin-right: 10px;
-          padding: 12px 24px;
-          border-radius: 4px;
-          margin-top: 24px;
-          border: 3px solid #322b5f;
-          white-space: nowrap;
-          display: inline-block; }
-          nav .nav .sd .right_side .links .links_ul .buttons_nav .log_in_nav:hover {
-            color: white;
-            background-color: #322b5f54; }
-        nav .nav .sd .right_side .links .links_ul .buttons_nav .book-demo_nav {
+    nav .nav .sd .right_side {
+      padding: 0 !important; }
+      nav .nav .sd .right_side .links .links_ul {
+        display: flex; }
+        nav .nav .sd .right_side .links .links_ul .sub_menu.links_ul_li.resc .dropdwn12.resource {
+          position: relative;
+          margin: 0 auto;
+          visibility: hidden;
+          transform: translateY(-200px);
+          transition: transform .5s ease-in-out; }
+          nav .nav .sd .right_side .links .links_ul .sub_menu.links_ul_li.resc .dropdwn12.resource.active7 {
+            visibility: visible !important;
+            transform: translateY(2px);
+            transition: transform 0.3s ease-in-out; }
+          nav .nav .sd .right_side .links .links_ul .sub_menu.links_ul_li.resc .dropdwn12.resource .res_ul {
+            background-color: #d1dfc3;
+            border-radius: 8px;
+            position: absolute;
+            display: flex;
+            flex-direction: column;
+            overflow-y: scroll;
+            max-height: 400px;
+            padding-left: 10px;
+            padding-top: 20px;
+            margin-top: 25px;
+            margin-left: -20px; }
+            nav .nav .sd .right_side .links .links_ul .sub_menu.links_ul_li.resc .dropdwn12.resource .res_ul .p_resc {
+              margin-top: 5px;
+              margin-bottom: 10px;
+              color: #0f0d1e;
+              font-size: 18px;
+              line-height: 26px;
+              font-weight: 600; }
+            nav .nav .sd .right_side .links .links_ul .sub_menu.links_ul_li.resc .dropdwn12.resource .res_ul .a-hover {
+              margin-bottom: -14px;
+              color: #0f0d1e;
+              font-size: 18px;
+              line-height: 26px;
+              font-weight: 600; }
+            nav .nav .sd .right_side .links .links_ul .sub_menu.links_ul_li.resc .dropdwn12.resource .res_ul .res_ul_li {
+              padding-right: 40px;
+              margin-bottom: 10px;
+              margin-left: 15px; }
+              nav .nav .sd .right_side .links .links_ul .sub_menu.links_ul_li.resc .dropdwn12.resource .res_ul .res_ul_li .a-hover {
+                color: #222;
+                font-weight: normal; }
+        nav .nav .sd .right_side .links .links_ul .h_w1 {
+          margin-left: 44px; }
+        nav .nav .sd .right_side .links .links_ul .sub_menu .ox {
+          color: white;
+          font-size: 40px;
+          margin-left: 5px; }
+          nav .nav .sd .right_side .links .links_ul .sub_menu .ox.active12 {
+            transform: rotate(180deg);
+            transition: transform 0.8s  ease-in-out; }
+        nav .nav .sd .right_side .links .links_ul .sub_menu .dropdwn12.h_w123 {
+          position: relative;
+          margin: 0 auto;
+          visibility: hidden;
+          transform: translateY(-200px);
+          transition: transform 0.2s ease-in-out; }
+          nav .nav .sd .right_side .links .links_ul .sub_menu .dropdwn12.h_w123.active7 {
+            visibility: visible !important;
+            transform: translateY(2px);
+            transition: transform 0.3s ease-in-out; }
+          nav .nav .sd .right_side .links .links_ul .sub_menu .dropdwn12.h_w123 .hw_ul {
+            background-color: #d1dfc3;
+            border-radius: 8px;
+            position: absolute;
+            display: flex;
+            flex-direction: column;
+            padding: 40px;
+            margin-top: 25px;
+            margin-left: -20px; }
+            nav .nav .sd .right_side .links .links_ul .sub_menu .dropdwn12.h_w123 .hw_ul .hw_ul_li {
+              white-space: nowrap;
+              margin-bottom: 12px;
+              font-size: 16px; }
+              nav .nav .sd .right_side .links .links_ul .sub_menu .dropdwn12.h_w123 .hw_ul .hw_ul_li a {
+                color: black; }
+                nav .nav .sd .right_side .links .links_ul .sub_menu .dropdwn12.h_w123 .hw_ul .hw_ul_li a:hover {
+                  color: #867df3; }
+        nav .nav .sd .right_side .links .links_ul .sub_men3 {
+          margin-top: 10px;
+          margin-right: 10px; }
+        nav .nav .sd .right_side .links .links_ul .links_ul_li {
+          margin-top: 20px;
+          font-size: 16px;
           display: inline-block;
-          cursor: pointer;
-          padding: 15px 26px;
-          border-radius: 4px;
-          margin-top: 23px;
-          background-color: #5B35D5;
-          white-space: nowrap; }
-          nav .nav .sd .right_side .links .links_ul .buttons_nav .book-demo_nav:hover {
-            color: white;
-            background-color: #5a3dbb; }
+          margin-right: 22px;
+          white-space: nowrap;
+          padding: 15px;
+          cursor: pointer; }
+          nav .nav .sd .right_side .links .links_ul .links_ul_li:hover {
+            background-color: #1B1734;
+            border-radius: 4px;
+            cursor: pointer; }
+          nav .nav .sd .right_side .links .links_ul .links_ul_li a:hover {
+            color: white; }
+        nav .nav .sd .right_side .links .links_ul .buttons_nav {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-wrap: nowrap; }
+          nav .nav .sd .right_side .links .links_ul .buttons_nav .log_in_nav {
+            cursor: pointer;
+            margin-right: 10px;
+            padding: 12px 24px;
+            border-radius: 4px;
+            margin-top: 24px;
+            border: 3px solid #322b5f;
+            white-space: nowrap;
+            display: inline-block; }
+            nav .nav .sd .right_side .links .links_ul .buttons_nav .log_in_nav:hover {
+              color: white;
+              background-color: #322b5f54; }
+          nav .nav .sd .right_side .links .links_ul .buttons_nav .book-demo_nav {
+            display: inline-block;
+            cursor: pointer;
+            padding: 15px 26px;
+            border-radius: 4px;
+            margin-top: 23px;
+            background-color: #5B35D5;
+            white-space: nowrap; }
+            nav .nav .sd .right_side .links .links_ul .buttons_nav .book-demo_nav:hover {
+              color: white;
+              background-color: #5a3dbb; }
     nav .nav .sd .burger_svg {
       display: none; }
       @media screen and (max-width: 1000px) {
@@ -15851,7 +15854,6 @@ header {
         justify-content: center;
         align-items: center;
         width: 80px;
-        z-index: 1;
         height: 80px;
         background-color: rgba(134, 125, 243, 0.88);
         border-radius: 50%; }
@@ -17764,3 +17766,120 @@ footer {
       display: none; }
     .cards_blog .active1 {
       display: block; } }
+
+.section-1_gb .row_gb .left_side_gb {
+  margin: 0 auto; }
+  .section-1_gb .row_gb .left_side_gb .book .button_gb {
+    text-decoration: none;
+    border-radius: 4px;
+    background-color: #5B35D5;
+    border: 1px solid transparent;
+    padding: 16px 32px;
+    margin-top: 50px; }
+  .section-1_gb .row_gb .left_side_gb .night40_gb {
+    font-size: 39px;
+    margin-top: 200px; }
+
+.section-1_gb .row_gb .right_side_gb {
+  position: relative;
+  margin-top: 200px;
+  margin-bottom: 150px; }
+  .section-1_gb .row_gb .right_side_gb .right_div {
+    width: 100%;
+    position: relative; }
+    .section-1_gb .row_gb .right_side_gb .right_div .video_image_gb {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 80px;
+      height: 80px;
+      background-color: rgba(134, 125, 243, 0.88);
+      border-radius: 50%; }
+      .section-1_gb .row_gb .right_side_gb .right_div .video_image_gb:hover {
+        cursor: pointer;
+        background-color: #5b35d5; }
+    .section-1_gb .row_gb .right_side_gb .right_div img {
+      width: 100%; }
+
+.sec2 {
+  background-color: #1B1734; }
+  .sec2 .sec_2gb {
+    margin-right: 0;
+    padding-right: 0;
+    padding-left: 60px;
+    padding-top: 200px;
+    padding-bottom: 200px; }
+    .sec2 .sec_2gb .sc1 {
+      width: 44%;
+      color: white;
+      background-color: #0F0D1E;
+      padding: 50px;
+      margin-right: 50px;
+      margin-bottom: 15px;
+      border-radius: 8px; }
+      .sec2 .sec_2gb .sc1 .icon-featuregb {
+        margin-bottom: 24px; }
+      .sec2 .sec_2gb .sc1 .heading-feature-boxgb {
+        font-size: 24px;
+        line-height: 150%;
+        font-weight: 500;
+        color: white; }
+      .sec2 .sec_2gb .sc1 .night40gb {
+        max-width: 80%;
+        min-height: auto;
+        min-width: auto;
+        margin-top: 10px;
+        color: #adaabf;
+        font-size: 20px; }
+
+.sec3 {
+  margin-bottom: 100px;
+  background-color: #0F0D1E;
+  color: white;
+  text-align: center; }
+  .sec3 .centered {
+    text-align: center;
+    margin-top: 100px; }
+  .sec3 .a {
+    margin-bottom: 100px;
+    margin-top: 30px;
+    background-color: #5B35D5;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    padding: 15px; }
+
+.threecards hr {
+  color: #807c7c; }
+
+.threecards .four-card {
+  padding-left: 20px;
+  color: white; }
+  .threecards .four-card .fc_row {
+    display: flex;
+    flex-wrap: wrap; }
+    .threecards .four-card .fc_row .fc_col {
+      height: 280px;
+      width: 24%;
+      margin-right: 80px;
+      margin-bottom: 100px; }
+      .threecards .four-card .fc_row .fc_col .icon-module {
+        margin-top: 100px;
+        margin-bottom: 30px;
+        width: 20%; }
+      .threecards .four-card .fc_row .fc_col h3, .threecards .four-card .fc_row .fc_col .h3 {
+        font-size: 20px;
+        font-weight: 500d; }
+        .threecards .four-card .fc_row .fc_col h3.ct_h3_3, .threecards .four-card .fc_row .fc_col .ct_h3_3.h3 {
+          margin-top: -14px; }
+      .threecards .four-card .fc_row .fc_col .paragraph-module {
+        color: #adaabf; }
+      .threecards .four-card .fc_row .fc_col .arrowtext {
+        display: flex;
+        margin-bottom: 10px; }
+        .threecards .four-card .fc_row .fc_col .arrowtext p {
+          color: #867df3; }
+        .threecards .four-card .fc_row .fc_col .arrowtext .link-arrow {
+          margin-bottom: 14px; }
