--- a/assets/sass/pages/_index.scss
+++ b/assets/sass/pages/_index.scss
@@ -22,6 +22,7 @@ nav{
         position: fixed;
         z-index: 1;
         width: 100%;
+        padding: 0!important;
 
         height: 96px;
     background-color:#0F0D1E ;
@@ -46,6 +47,7 @@ nav{
             }
         }
         .right_side{
+            padding: 0 !important;
             .links{
                 .links_ul{
                     .sub_menu.links_ul_li.resc{
@@ -619,7 +621,7 @@ margin-bottom: 100px;
                         justify-content: center;
                         align-items: center;
                         width: 80px;
-                        z-index: 1;
+                        // z-index: 1;
                         
                         height: 80px;
                         background-color: rgba(134,125,243,.88);;
@@ -3680,405 +3682,199 @@ background-color: white;
                 
             }
         }
-        
+
+        /////////////////global_payrol///////////////////// 
 
 
+    .section-1_gb{
+        .row_gb{
+            .left_side_gb{
+                margin: 0 auto;
+                .book{
+                    .button_gb{
+                        text-decoration: none;
+                        border-radius: 4px;
+                        background-color: #5B35D5;
+                        border: 1px solid transparent;
+                        padding: 16px 32px;
+                        margin-top: 50px;
+                    }
+                }
+                .night40_gb{
+                    font-size: 39px;
+                    margin-top: 200px;
+                }
+            }
+            .right_side_gb{
+                position: relative;
+                margin-top: 200px;
+                margin-bottom: 150px;
+               .right_div{
+                   width: 100%;
+                   position: relative;
+                   .video_image_gb{
+                    &:hover{
+                        cursor: pointer;
+                        background-color: #5b35d5;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-///////////////////global_payrol///////////////////// 
-// .global_payroll{
-//     background-color: #0F0D1E;
-//     .sd{
-// height: 100px;
-//     }
-//     .sdb{
-//         // background-color: red;
-//         .subpage{
-//             margin-top: 220px;
-//             color: white;
-            
-//         }
-//         .book{
-//             .a{
-//                 text-decoration: none;
-//                 border-radius: 4px;
-//                 background-color: #5B35D5;
-//                 border: 1px solid transparent;
-//                 padding: 16px 32px;
-//                 margin-top: 50px;
-//             }
-//         }
-
-//         .img-right-side{
-//             width: 100%;
-//             margin-bottom: 200px;
-//         }
-//     }
-// }
-
-// .sec2{
-//     background-color: #1B1734;
-//     .section2{
-//         .sc1{
-//             margin-top: 100px;
-//             width: 44%;
-//             color: white;
-//             padding: 50px;
-//             background-color: #0F0D1E;
-//             margin-right: 40px;
-//             margin-bottom: 100px;
-//             border-radius: 8px;
-    
-//             .icon1{
-//                 font-size: 45px;
-//                 margin-bottom: 50px;
-//             }
-//             p{
-//     margin: 50px 0;
-//                 width: 80%;
-    
-//             }
-//         }
-//     }
-// }
-
-
-// .sec3{
-//     background-color:#0F0D1E ;
-//     color: white;
-//     text-align: center;
-//     .centered{
-//         text-align: center;
-//     margin-top: 100px;
-//     }
-//     .a{
-//         margin-bottom: 100px;
-//         margin-top: 30px;
-//         background-color: #5B35D5;
-//         border:1px solid transparent;
-//         border-radius: 8px;
-//         padding: 15px ;
-
-//     }
-
-
-    
-// }
-//////////////////////////////////////////
-///////////blog_emplyoee///////////////
-// .blog-employee{
-//     background-color: #EBEAF5;
-//     padding: 0 250px;
-//     h1{
-//         font-size: 56px;
-//         font-weight: 600;
-//         margin-bottom: 20px;
-
-//     }
-//     .remote_w_btn{
-//         padding:6px 15px;
-//         background-color: #5B35D5;
-//         margin-bottom: 50px;
-//         display: inline-block;
-//         border-radius: 8px;
-
-//     }
-//     .emp-img-first{
-//         border-radius: 555px; 
-//         margin-top: 20px;
-//         margin-bottom: 100pxa;
-//     }
-// }
-// .sec2_blog_employee{
-//     padding: 0 300px;
-//   .blg_img_emp{
-//       margin-top: 100px;
-    
-//     text-align: center;
-//     display: flex;
-    
-// }
-
-// .employe_img{
-//     width: 56px;
-//     height: 56px;
-//     border-radius: 50%;
-// }
-// .text_lef_img{
-//     display: flex;
-//         flex-direction: row;
-//         align-items: center;
-//         margin-left: 10px;
-//         .divider-text{
-//             margin: 0 5px;
-//         }
-//     }
-//     .list{
-        
-//             li{
-//                 list-style: square;
-//             }
-        
-//     }
-// }
-/////page-country///
-// .page_country{
-//     background-color: #0F0D1E;
-//     color: white;
-// h1{
-//     margin-top: 100px;
-// }
-//     .country_img{
-//         width: 100%;
-//         margin-bottom: 200px;
-//     }
-// }
-// .list_country{
-//     background-color: #1B1734;
-    
-//     .pd{
-//         margin-top: 100px;
-//         margin-bottom: 200px;
-//         hr{
-//             width: 31%;
-//             margin-left: 31px;
-//             color: #5b557f;
-//             opacity: 1;
-    
-    
-//         }
-//         .country-list-item{
-    
-//             li{
-//                 color: white;
-//                 font-size: 16px;
-//             }
-//         }
-//     }
-// }
-
-// .after_co_list{
-//     background-color:#0F0D1E;
-//     // margin: 0 auto;
-// .md{
-// text-align: center;
-// }
-//     .centered{
-//         color: white;
-//         margin-top: 120px;
-//         margin-bottom: 50px;
-//     }
-// a{
-//     border-radius:6px;
-//     border:1px solid transparent;
-//     padding: 16px 32px;
-//     background-color:#5B35D5 ;
-//     margin-bottom: 100px;
-//     display: inline-block;
-// }
-
-// }
-// .buildgd{
-//     background-color: #1B1734;
-//     color: white;
-//     h2{
-//         font-size: 40px;
-//         margin-top: 100px;
-//         margin-top: 50px;
-//     }
-
-// }
-
-// .four-card{
-   
-//     padding: 15px;
-//     background-color: #1B1734;
-//     color: white;
-//     .icon-module{
-//         margin-top: 100px;
-//         margin-bottom: 30px;
-//         width: 20%;
-
-//     }
-//     h3{
-// font-size: 20px;
-// font-weight: 500d;
-//     }
-//     .paragraph-module{
-//         color: #adaabf;
-//     }
-//     .arrowtext{
-//         display: flex;
-//         margin-bottom: 10px;
-//         p{
-//             color: #867df3;
-//         }
-//         .link-arrow{
-//             margin-bottom: 14px;
-//         }
-//     }
-  
-// }
-////////blog//////////
-// .start_blog{
-//     // position: relative;
-//     // height: 1200px;
-//     .tex_p{
-//         padding: 0 200px;
-//     }
-//     .tabs{
-
-//         padding: 0 160px;
-//         .bttn {
-//             background-color: #322B5F;
-//             margin-right: 10px;
-//             padding: 16px 24px;
-//             margin-bottom: 10px;
-//     border-radius: 4px;
-// }    
-// .active2{
-//     background-color: transparent;
-//     border: 1px solid #66E7D8;
-
-//         }
-//        .tabss{
-//            margin-top: 40px;
-//            padding: 0 40px;
-//            display: flex;
-//            flex-wrap: wrap;
-//         a{
-//             }
-//        }
-//     }
-// }
-
-// .cards_blog{
-//     // background-color:#1B1734 ;
-//     margin-top: 100px;
-//     // position: absolute;
-//     bottom: -100px;
-
-//     .blog_cards{
-//         margin-bottom: 50px;
-                
-//                 .img{
-//                     position: relative;
-//                     .img1-text{
-//                         position: absolute;
-//                         bottom: 20px;
-//                         left: 30px;
-//                         background-color: #5B35D5;
+                    }
+                       
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        width: 80px;
+                        // z-index: 1;
                         
-//                     }
-//                     p{
-//                     }
-//                     .img_ss{
-//                         width: 100%;
-//                         border-top-left-radius:16px ;
-//                         border-top-right-radius:16px ;
-//                     }
-//                 }
-//                 .after_img{
-//                     padding: 40px;
-//                     background-color: #1B1734;
-//                     color: #adaabf;
-        
-//                     .homepage1{
-//                         font-size: 23px;
-//                         color: white;
-//                     }
-//                 }
-//             }
+                        height: 80px;
+                        background-color: rgba(134,125,243,.88);;
+                        border-radius: 50%;
+                       
+                   }
+                   img{
+                    //    z-index: -1;
+                       width: 100%;
+                   }
+               
+               }
+            }
+        }
+    }
 
-// .blog_part{
-//     // position:absolute;
-//     // visibility: hidden;
-//     // opacity: -1;
-//     display: none;
-// }
+.sec2{
+    background-color: #1B1734;
+    .sec_2gb{
+        // width: 100%;
 
-// .active1{
-//     // visibility: hidden;
-//     display: block;
+        margin-right: 0;
+        padding-right: 0;
+        padding-left: 60px;
+        // margin-bottom: 200px;
+        // margin-top: 200px;
+        padding-top: 200px;
+        padding-bottom: 200px;
+        .sc1{
+            // margin-top: 100px;
 
-// }
+            width: 44%;
+            color: white;
+            background-color: #0F0D1E;
+            padding: 50px;
+            margin-right: 50px;
+            margin-bottom: 15px;
+            border-radius: 8px;
+            // padding: 100px;
+
+            .icon-featuregb{
+                margin-bottom: 24px;
+            }
+            .heading-feature-boxgb{
+                font-size: 24px;
+                line-height: 150%;
+                font-weight: 500;
+                color: white;
+            }
+            .night40gb{
+                max-width: 80%;
+                min-height: auto;
+                min-width: auto;
+                margin-top: 10px;
+                color: #adaabf;
+                font-size: 20px;
+            }
     
-// }
+           
+           
+        }
+    }
+    
+}
 
-/////login///
-// .login_start{
-//     .left_side_login{
-//         background-color: hsl(240, 40%, 98%);
-//         padding: 0 100px;
-//         text-align: center;
-//         .login_logo{
-            
-//             margin-top: 50px ;        
-//         }
-//         .p_first{
-//             margin-top: 150px;
-//             margin-bottom: 50px;
-//             color: rgb(91, 85, 127);
-//             font-size: 24px;
-//             font-weight: 600;
-//             padding: 0 60px;
-//         }
-//         .p_second{
-//             color: rgb(132, 128, 159);
-//             font-size: 16px;
-//             font-weight: 600;
-//             margin-bottom: 50px;
 
-//         }
-//         .svg_end{
-//             margin-bottom: 9 0px;
-//         }
+.sec3{
+    margin-bottom: 100px;
+    background-color:#0F0D1E ;
+    color: white;
+    text-align: center;
+    .centered{
+        text-align: center;
+    margin-top: 100px;
+    }
+    .a{
+        margin-bottom: 100px;
+        margin-top: 30px;
+        background-color: #5B35D5;
+        border:1px solid transparent;
+        border-radius: 8px;
+        padding: 15px ;
 
-//     }
-//     .right_side{
-//         margin-top: 160px;
-//         padding-left:200px;
-//         .text_top{
-//             h1{
-//                 margin-bottom: 50px;
-                
-//             }
-//         }
-//     }
-//     input{
-//         display: block;
-//         width: 350px; 
-//     padding: 8px 16px; 
-//     border-radius: 4px; 
-//     border: 1px solid;
-//  }
-//     .login_btn{
-//         color: white;
-//         margin-top: 25px;
-//         background-color: #5B35D5;
-//     }
-//     a{
-//         color:blue;
-//         text-decoration-line: underline;
-//     }
-//     hr{
-//         width: 60%;
-//     }
-// }
+    }
+}
+
+.threecards{
+    // background-color: #1B1734;
+    hr{
+        color: rgb(128, 124, 124);
+    }
+    .four-card{
+        padding-left: 20px;
+        // background-color: #1B1734;
+        color: white;
+     .fc_row{
+         display: flex;
+         flex-wrap: wrap;
+        .fc_col{
+            height: 280px;
+            width: 24%;
+            margin-right: 80px;
+            margin-bottom: 100px;
+            .icon-module{
+                margin-top: 100px;
+                margin-bottom: 30px;
+                width: 20%;
+        
+            }
+            h3{
+                &.ct_h3_3{
+                    margin-top: -14px;
+                }
+        font-size: 20px;
+        font-weight: 500d; 
+            }
+            .paragraph-module{
+                color: #adaabf;
+            }
+            .arrowtext{
+                display: flex;
+                margin-bottom: 10px;
+                p{
+                    // display: inline-block;
+                    color: #867df3;
+                }
+                .link-arrow{
+                    margin-bottom: 14px;
+                    
+                }
+            }
+          }
+     }
+      
+    }
+
+}
+    
+
+
+        
+
+
+
+
+
+
+
 
 
 
